@@ -2,7 +2,17 @@ SubDir TOP Demos OpenGL ;
 
 if $(GLUT.AVAILABLE) = "yes"
 {
+
+IncludeDir  Extras/PhysicsInterface/Common ;
+IncludeDir  Extras/PhysicsInterface/CcdPhysics ;
+
   Description bulletopenglsupport : "Bullet OpenGL support" ;
-  Library bulletopenglsupport : [ Wildcard *.h *.cpp ] : noinstall ;
+  Library bulletopenglsupport : 
+  [ Wildcard *.h *.cpp ] : noinstall 
+;
+CFlags bulletopenglsupport :
+[ FIncludes $(TOP)/Extras/PhysicsInterface/Common ]
+[ FIncludes $(TOP)/Extras/PhysicsInterface/CcdPhysics ]
+;
   ExternalLibs bulletopenglsupport : GLUT ;
 }
